--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,5 @@
-version: "3"
-
 services:
-  app:
+  g9_iris_predictor_app:
     image: paulpascal/g9-iris-species-predictor:latest
     ports:
-      - "5555:80"
+      - "5555:5555"
