--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -54,12 +54,12 @@ jobs:
         scp -o StrictHostKeyChecking=no -i aws_key.pem docker-compose.yml $AWS_USERNAME@$AWS_HOST:/home/$AWS_USERNAME/docker-compose.yml
   
     - name: Deploy to AWS EC2
-      env:
-        AWS_USERNAME: ${{ secrets.AWS_USERNAME }}
-        AWS_HOST: ${{ secrets.AWS_HOST }}
-      run: |
-        ssh -o StrictHostKeyChecking=no -i aws_key.pem $AWS_USERNAME@$AWS_HOST << 'EOF'
-          docker-compose -f /home/$AWS_USERNAME/docker-compose.yml down
-          docker-compose -f /home/$AWS_USERNAME/docker-compose.yml pull
-          docker-compose -f /home/$AWS_USERNAME/docker-compose.yml up -d
-        EOF
+      uses: easingthemes/ssh-deploy@v5.0.0
+      with:
+        SSH_PRIVATE_KEY: ${{ secrets.AWS_KEY }}
+        REMOTE_HOST: ${{ secrets.AWS_HOST }}
+        REMOTE_USER: ${{ secrets.AWS_USERNAME }}
+        SCRIPT_AFTER: |
+          docker-compose down
+          docker-compose pull
+          docker-compose up -d
